@startuml ra-database-diagram

title QualiTrack - Reporting and Analysis Database Diagram

hide methods
hide stereotypes

entity "audit_reports" {
  * id : BIGINT PK
  --
  created_at : DATETIME NOT NULL
  updated_at : DATETIME NOT NULL
  laboratory_id : BIGINT NOT NULL
  batch_id : BIGINT
  equipment_id : BIGINT
  generated_by : BIGINT NOT NULL
  generated_by_name : VARCHAR(150) NOT NULL
  report_type : VARCHAR(50) NOT NULL
  date_range_from : VARCHAR(30)
  date_range_to : VARCHAR(30)
  file_path : VARCHAR(500) NOT NULL
  checksum : VARCHAR(255) NOT NULL
  generated_at : VARCHAR(30) NOT NULL
}

entity "audit_log_entries" {
  * id : BIGINT PK
  --
  created_at : DATETIME NOT NULL
  updated_at : DATETIME NOT NULL
  action : VARCHAR(50) NOT NULL
  entity_type : VARCHAR(100) NOT NULL
  entity_id : BIGINT
  performed_by : BIGINT NOT NULL
  timestamp : VARCHAR(30) NOT NULL
  details : VARCHAR(1000)
}

entity "kpi_dashboards" {
  * id : BIGINT PK
  --
  created_at : DATETIME NOT NULL
  updated_at : DATETIME NOT NULL
  laboratory_id : BIGINT NOT NULL
  timestamp : VARCHAR(30) NOT NULL
  overall_health_score : DOUBLE NOT NULL
}

entity "kpi_metrics" {
  * id : BIGINT PK
  --
  created_at : DATETIME NOT NULL
  updated_at : DATETIME NOT NULL
  dashboard_id : BIGINT FK NOT NULL
  name : VARCHAR(100) NOT NULL
  value : DOUBLE NOT NULL
  unit : VARCHAR(20) NOT NULL
  target_value : DOUBLE NOT NULL
  status : VARCHAR(50) NOT NULL
  recorded_at : VARCHAR(30) NOT NULL
}

entity "deviation_trends" {
  * id : BIGINT PK
  --
  created_at : DATETIME NOT NULL
  updated_at : DATETIME NOT NULL
  parameter_name : VARCHAR(100) NOT NULL
  equipment_id : BIGINT NOT NULL
  trend_direction : VARCHAR(50) NOT NULL
}

entity "trend_data_points" {
  * id : BIGINT PK
  --
  created_at : DATETIME NOT NULL
  updated_at : DATETIME NOT NULL
  trend_id : BIGINT FK NOT NULL
  timestamp : VARCHAR(30) NOT NULL
  recorded_value : DOUBLE NOT NULL
  upper_threshold : DOUBLE NOT NULL
  lower_threshold : DOUBLE NOT NULL
}

kpi_dashboards ||--o{ kpi_metrics : contains
deviation_trends ||--o{ trend_data_points : contains

@enduml